--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@
 <h2>I'm a Web Developer</h2>
 <hr>
 <h2><a href="./public/movie-ranking.html">Movie Ranking Project</a></h2>
-<img src="./assets/images/movie-ranking.png" alt="my invitation">
+<img src="./assets/images/movie-ranking.png" alt="movie ranking" height="400">
 <br>
 <h2><a href="./public/birthday-invite.html">Birthday Invite Project</a></h2>
-<img src="./assets/images/birthday-invite.png" alt="">
+<img src="./assets/images/birthday-invite.png" alt="birthday invitation">
 <br>
-<a href="./public/about.html">About Me</a><br><a href="./public/contact.html">Contact Me</a>
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<h3><a href="./public/about.html">About Me</a></h3>
+<h3><a href="./public/contact.html">Contact Me</a></h3>
 </body>
 </html>
